<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="agentweb_camera">Camera</string>
    <string name="agentweb_cancel">Cancel</string>
    <string name="agentweb_click_open">Tap to continue</string>
    <string name="agentweb_coming_soon_download">Coming soon to download the file</string>
    <string name="agentweb_continue">Continue</string>
    <string name="agentweb_current_downloaded_length">downloaded:%s</string>
    <string name="agentweb_current_downloading_progress">Downloading:%s</string>
    <string name="agentweb_default_page_error">error~</string>
    <string name="agentweb_download">Download</string>
    <string name="agentweb_download_fail">Download failed!</string>
    <string name="agentweb_download_task_has_been_exist">The task already exists, do not repeat click to download!</string>
    <string name="agentweb_file_chooser">Files</string>
    <string name="agentweb_file_download">Download</string>
    <string name="agentweb_honeycomblow">Wi-Fi disconnected. Continue the download via mobile data network?</string>
    <string name="agentweb_leave">Go away</string>
    <string name="agentweb_leave_app_and_go_other_page">leaving %s and opening another app?</string>
    <string name="agentweb_loading">Loading ...</string>
    <string name="agentweb_max_file_length_limit">The selected file can not be larger than %s MB</string>
    <string name="agentweb_message_show_continue">Do you want to continue anyway?</string>
    <string name="agentweb_message_show_ssl_error">SSL Certificate error.</string>
    <string name="agentweb_message_show_ssl_expired">The certificate has expired.</string>
    <string name="agentweb_message_show_ssl_hostname_mismatch">The certificate Hostname mismatch.</string>
    <string name="agentweb_message_show_ssl_not_yet_valid">The certificate is not yet valid.</string>
    <string name="agentweb_message_show_ssl_untrusted">The certificate authority is not trusted.</string>
    <string name="agentweb_tips">Note</string>
    <string name="agentweb_title_ssl_error">SSL Certificate Error</string>
    <string name="agentweb_trickter">You have a new notice</string>
    <string name="and_char">&amp;</string>
    <string name="app_name">鲸看+</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="at_char">@</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_to_restart">Click to try again</string>
    <string name="dlna_tips">&lt; 长按每集可投屏播放已下载文件 &gt;</string>
    <string name="edit_web_source_notice">APP运行原理是通过实时请求添加的第三方任意网站，获得返回html后，获取对应的内容过滤网页广告，达到便于阅读的目的。请在下方添加相应html解析规则以便添加新网站源！</string>
    <string name="efp__action_deselect">Deselect</string>
    <string name="efp__action_grid">Grid</string>
    <string name="efp__action_invert_selection">Invert selection</string>
    <string name="efp__action_list">List</string>
    <string name="efp__action_select_all">Select all</string>
    <string name="efp__app_name">ExFilePicker</string>
    <string name="efp__empty_directory">This directory is empty</string>
    <string name="efp__folder_already_exists">Folder already exists</string>
    <string name="efp__folder_created">Folder created successfully</string>
    <string name="efp__folder_name_hint">Folder name</string>
    <string name="efp__folder_not_created">Error! Folder isn\'t created</string>
    <string name="efp__new_folder">New folder</string>
    <string name="efp__sort">Sort</string>
    <string name="efp__storage">Storage</string>
    <string name="email">grayindus@163.com</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_playback_speed_normal">Normal</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="first_go_web_play_notify">即将加载网页，可在【我的】-【设置】中更改获取方式为静默嗅探！</string>
    <string name="gravity_center">center</string>
    <string name="gravity_left">left</string>
    <string name="gravity_right">right</string>
    <string name="hello_world">Hello world!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="http_ip">http://%s:%d</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="ijkplayer_dummy" />
    <string name="item_view_role_description">Tab</string>
    <string name="local_dlna_tips">※ 息屏、锁屏后有可能会导致本地投屏中断，请尽量将App加入后台白名单\n【 手机充电状态下本地投屏 】</string>
    <string name="long_click_episode">长按每一集可跳转源网页嗅探播放、以及【 缓 存 下 载 】视频！</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="mianzeAbout">1、本软件提供的所有内容均为实时请求自各第三方聚合网站，获得返回html后，获取对应的内容过滤网页广告，达到便于阅读的目的。\n\n2、本软件仅作为一个WEB网页浏览器，各第三方聚合网站返回的内容与本软件无关，本软件对其概不负责，亦不承担任何法律责任。本软件不提供片源资源存储，也不参与录制、上传。\n\n3、所有请求网站收集自网络，播放使用第三方，本软件不提供任何视听上传服务。本软件仅为个人技术学习使用，请在下载后24小时删除。本软件作者不承担任何法律责任。\n\n4、任何单位或个人认为通过本软件搜索链接到的第三方网页内容或者视频可能涉嫌侵犯其信息网络传播权，请及时向作者发邮件提出书面权力通知。在收到上述邮件后，将会尽快断开相关网站源的搜索链接内容。</string>
    <string name="question_char">?</string>
</resources>